Work with Polymer3

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
       import '@polymer/iron-demo-helpers/demo-snippet';
     </script>
 
-    <script type="module" src="../icon-toggle.js"></script>
+    <script type="module" src="./icon-toggle-demo.js"></script>
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
@@ -25,7 +25,7 @@
       <h3>Basic icon-toggle demo</h3>
       <demo-snippet>
         <template>
-          <icon-toggle></icon-toggle>
+          <icon-toggle-demo></icon-toggle-demo>
         </template>
       </demo-snippet>
     </div>
